Fix table title overflow [PUB-168]

--- a/frontend/scss/molecules/_m-table.scss
+++ b/frontend/scss/molecules/_m-table.scss
@@ -82,6 +82,11 @@ Intended for very simple m-tables..
 
   caption {
     margin-bottom: 40px;
+    text-align: left;
+
+    h2 {
+      max-width: 100%;
+    }
   }
 
   th, td {
